Moved index.html and some fixes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     </div>
                     <div class="col-sm-12 col-md-7 ps-0">
                         <div class="landing_description">
-                            <h1 class="display-2">In Constructie!</h1>
-                            <p>Va asteptam in curand.</p>
+                            <h1 class="display-2">În construcție!</h1>
+                            <p>Vă așteptăm în curând.</p>
                             <p></p>
                             <p></p>
                         </div>
