Refactor static file paths to use '/public' prefix

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:description" content="In Constructie" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.kanzen.ro" />
-    <meta property="og:image" content="https://www.kanzen.ro/logo.png" />
+    <meta property="og:image" content="https://www.kanzen.ro/public/logo.png" />
     <meta property="og:site_name" content="In Constructie" />
 
-    <link rel="stylesheet" href="/css/purged.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="public/css/purged.css" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <title>In Constructie</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
                     <div class="col-sm-12 col-md-5 px-0">
                         <div class="image_wrapper">
                             <div class="fit-content">
-                                <img class="alignment fit-image" src="/image.gif" decoding="async" loading="lazy" />
+                                <img class="alignment fit-image" src="public/image.gif" decoding="async" loading="lazy" />
                             </div>
                         </div>
                     </div>
@@ -553,7 +553,7 @@
     </div>
 </div>
 
-<script src="js/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="public/js/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="public/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
